used external javascript

--- a/counter.html
+++ b/counter.html
@@ -1,8 +1,11 @@
 <div x-data="{ count : 0 } ">
-    <h1>Counter</h1>
-    <div class="counter" x-text="count"></div>
-    <div>
-      <button @click="count++">+</button>
-      <button @click="count--">-</button>
-    </div>
+  <h1>Counter</h1>
+  <div class="counter" x-text="count"></div>
+  <div>
+    <button @click="count++">+</button>
+    <button @click="count--">-</button>
+  </div>
+  <script src="index.js"></script>
+  <script src="counter.js"></script>
+  <!-- <script src="index.js"></script> -->
 </div>
